--- a/lab6.qsf
+++ b/lab6.qsf
@@ -445,4 +445,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE ball.sv
 set_global_assignment -name QIP_FILE lab62soc/synthesis/lab62_soc.qip
 set_global_assignment -name FLOW_ENABLE_POWER_ANALYZER ON
 set_global_assignment -name POWER_DEFAULT_INPUT_IO_TOGGLE_RATE "12.5 %"
+set_global_assignment -name SYSTEMVERILOG_FILE fsm.sv
+set_global_assignment -name MIF_FILE mif.mif
+set_global_assignment -name QIP_FILE ram.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
